--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
    "clang-format>=20.1.0",
    "cmakelang>=0.6.13",
    "cpplint>=2.0.0",
+   "pyright>=1.1.408",
    "ruff>=0.11.7",
    # mkdocs and documentation
    "markdown-include>=0.8.1",
