--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,8 @@ jobs:
 
   lint-format:
     runs-on: ${{ matrix.os }}
+    container:
+      image: acreyes/kamayan:v1
 
     strategy:
       matrix:
