--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name="kamayan"
 version="0.1.0"
-requires-python = ">= 3.10"
+requires-python = ">= 3.10, < 3.14"
 dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
