--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,15 @@ dependencies = [
    "cmakelang>=0.6.13",
    "cpplint>=2.0.0",
    "ruff>=0.11.7",
-   # mkdocs and documentation
-   "markdown-include>=0.8.1",
-   "markdown-katex>=202406.1035",
-   "mike>=2.1.3",
-   "mkdocs>=1.6.1",
-   "mkdocs-material>=9.6.11",
-   "pymdown-extensions>=10.14.3",
+    # mkdocs and documentation
+    "markdown-include>=0.8.1",
+    "markdown-katex>=202406.1035",
+    "mike>=2.1.3",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.11",
+    "mkdocstrings[python]>=0.24.0",
+    "mkdocstrings-python>=1.7.0",
+    "pymdown-extensions>=10.14.3",
    "parthenon_tools",
    "wget>=3.2",
    "h5py>=3.14.0",
